--- a/package.json
+++ b/package.json
@@ -21,10 +21,16 @@
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
+    "cookie-cutter": "^0.2.0",
+    "cookies": "^0.8.0",
+    "dayjs": "^1.11.8",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^3.1.2",
     "lucide-react": "^0.244.0",
     "next": "13.4.6",
+    "next-auth": "^4.22.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
