--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.4",
     "@tanstack/react-table": "^8.9.2",
-    "autoprefixer": "10.4.14",
-    "class-variance-authority": "^0.6.0",
+    "autoprefixer": "^9.8.8",
+    "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "cookie-cutter": "^0.2.0",
     "cookies": "^0.8.0",
@@ -32,11 +33,12 @@
     "next": "13.4.6",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
+    "postcss-cli": "^10.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "recharts": "^2.7.1",
     "tailwind-merge": "^1.13.2",
-    "tailwindcss": "3.3.2",
+    "tailwindcss": "^3.3.2",
     "tailwindcss-animate": "^1.0.6"
   }
 }
