--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@boiseitguru/cookie-cutter": "^0.2.1",
     "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.4",
@@ -24,6 +26,7 @@
     "clsx": "^1.2.1",
     "cookie-cutter": "^0.2.0",
     "cookies": "^0.8.0",
+    "cookies-next": "^2.1.2",
     "dayjs": "^1.11.8",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
