--- a/package.json
+++ b/package.json
@@ -30,16 +30,19 @@
     "dayjs": "^1.11.8",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
+    "iron": "^5.0.6",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
     "lucide-react": "^0.244.0",
     "next": "13.4.6",
     "next-auth": "^4.22.1",
+    "next-iron-session": "^4.2.0",
     "postcss": "8.4.24",
     "postcss-cli": "^10.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "recharts": "^2.7.1",
+    "session": "^0.1.0",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "^3.3.2",
     "tailwindcss-animate": "^1.0.6"
