--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.4",
@@ -24,9 +27,11 @@
     "autoprefixer": "^9.8.8",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
+    "cmdk": "^0.2.0",
     "cookie-cutter": "^0.2.0",
     "cookies": "^0.8.0",
     "cookies-next": "^2.1.2",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.8",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
@@ -40,6 +45,7 @@
     "postcss": "8.4.24",
     "postcss-cli": "^10.1.0",
     "react": "18.2.0",
+    "react-day-picker": "^8.8.0",
     "react-dom": "18.2.0",
     "recharts": "^2.7.1",
     "session": "^0.1.0",
