--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dayjs": "^1.11.8",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
+    "firebase": "^10.1.0",
     "iron": "^5.0.6",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
