--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,8 +3,8 @@
   "short_name": "Tracks",
   "domain": "trackss.vercel.app",
   "url": "https://trackss.vercel.app",
-  "start_url": "/",
-  "scope": "/",
+  "start_url": "/dashboard",
+  "scope": ".",
   "description": "Tracks is a simple app to track your employees work and projects.",
   "image": "/images/Logo.png",
   "keywords": "tracks, track, work, projects, employees, employee, time, management, project, task, tasks, time management, time tracking, time tracker, time track, time tracks, time management app, time management apps, time management software, time management tool, time management tools, time management system, time management systems, time management website, time management websites, time management web app, time management web apps, time management web application, time management web applications, time management web tool, time management web tools, time management web site, time management web sites, time management webtool, time management webtools, time management webapp, time management webapps, time management webapplication, time management webapplications, time management web site, time management web sites, time management webtool, time management webtools, time management webapp, time management webapps, time management webapplication, time management webapplications",
