--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "firebase": "^10.1.0",
     "iron": "^5.0.6",
     "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.1",
     "jwt-decode": "^3.1.2",
     "lucide-react": "^0.244.0",
     "next": "13.4.6",
