--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react": "18.2.0",
     "react-day-picker": "^8.8.0",
     "react-dom": "18.2.0",
+    "react-pdf": "^7.3.3",
     "recharts": "^2.7.1",
     "session": "^0.1.0",
     "tailwind-merge": "^1.13.2",
